fixing broken text wrapping in notes

--- a/src/amo/components/App/styles.scss
+++ b/src/amo/components/App/styles.scss
@@ -35,6 +35,7 @@ textarea {
 *::before,
 *::after {
   box-sizing: inherit;
+  word-break: break-word;
 }
 
 body {
